force-app/main/default/objects/maps__TPArea__c/maps__TPArea__c.object-meta.xml
<CustomObject>
    <label>Territory Planning Area</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Planning Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>