force-app/main/default/objects/maps__TPArea__c/fields/maps__AssignmentRules1__c.field-meta.xml
<CustomField>
    <fullName>maps__AssignmentRules1__c</fullName>
    <label>Assignment Rules 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>