force-app/main/default/objects/maps__TPArea__c/fields/maps__Metadata__c.field-meta.xml
<CustomField>
    <fullName>maps__Metadata__c</fullName>
    <label>Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>