force-app/main/default/objects/maps__TPArea__c/fields/maps__Parent__c.field-meta.xml
<CustomField>
    <fullName>maps__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>maps__TPArea__c</referenceTo>
    <relationshipLabel>Areas</relationshipLabel>
    <relationshipName>Areas</relationshipName>
    <type>Lookup</type>
</CustomField>